--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "json-to-json-transformer",
-  "version": "1.1.0",
-  "description": "Module for transforming JSON via a template",
+  "name": "@nithinalva/json-to-json-transformer",
+  "version": "1.0.0",
+  "description": "Forked from [https://github.com/robtweed/qewd-transform-json] and added support for Node 4.x",
   "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/theleapofcode/json-to-json-transformer"
+    "url": "git+https://github.com/nithinalva/json-to-json-transformer.git"
   },
   "dependencies": {
     "traverse": ""
   },
-  "author": "TheLeapOfCode",
-  "license": "Apache-2.0",
+  "author": "",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/theleapofcode/json-to-json-transformer/issues"
+    "url": "https://github.com/nithinalva/json-to-json-transformer/issues"
   },
-  "homepage": "https://github.com/theleapofcode/json-to-json-transformer#readme"
+  "homepage": "https://github.com/nithinalva/json-to-json-transformer#readme"
 }
